Fix table view alignments and for empty deviceModels display Unknown instead

--- a/src/Layouts/MainLayout/MainLayout.module.css
+++ b/src/Layouts/MainLayout/MainLayout.module.css
@@ -19,6 +19,7 @@
     min-height: 280px;
     width: 85%;
     margin: 0 auto;
+    overflow:auto;
 }
 
 .Footer {
