--- a/src/components/TableView/TableView.module.css
+++ b/src/components/TableView/TableView.module.css
@@ -4,5 +4,5 @@
 }
 
 .TableView {
-    padding: 28px;
+    padding: 20px;
 }
